updated from different meetings

--- a/app/views/hearings/pages/confirmation.html
+++ b/app/views/hearings/pages/confirmation.html
@@ -30,6 +30,7 @@ Case details
 
                             <p class="govuk-body">
                                 We’ve submitted  this request for a hearing.  This request will be processed within 10 minutes.
+                                You can view the status of this request in the hearings tab.
                             </p>
                             <p class="govuk-body">
                                 If the hearing can’t be listed automatically, it will be sent to a member of staff to be processed.
