--- a/app/views/hearings/pages/language.html
+++ b/app/views/hearings/pages/language.html
@@ -45,7 +45,7 @@ Case details
 
 
                                 <div class="govuk-form-group">
-                                    <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
+                                    <div class="govuk-fieldset" aria-describedby="waste-hint">
                                         <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                             <h3 class="govuk-fieldset__heading">
                                                 Select any parties who need reasonable adjustments
@@ -60,12 +60,55 @@ Case details
                                             </div>
 
                                                     <div class="govuk-radios__conditional govuk-!-padding-bottom-1 govuk-!-padding-top-3" style="display:none;" id="ra1">
-                                                        <div class="govuk-form-group" style="width: 600px;">
+                                                        <div class="govuk-form-group"style="width: 600px;">
                                                             <label class="govuk-label govuk-label-m govuk-!-font-weight-bold" for="more-detail">
-                                                                Tell us what reasonable adjustments are required
+                                                                Select the reasonable adjustments required
                                                             </label>
-                                                            <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="3" aria-describedby="more-detail-hint"></textarea>
+
+                                                            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+
+                                                                <div class="govuk-checkboxes__item">
+                                                                    <input class="govuk-checkboxes__input" id="ra1radio" name="raradio1" type="checkbox" value="Language interpreter"  >
+                                                                    <label class="govuk-label govuk-checkboxes__label" for="ra1radio" >
+                                                                        Language interpreter
+                                                                    </label>
+                                                                </div>
+                                                                <div class="govuk-checkboxes__item">
+                                                                    <input class="govuk-checkboxes__input" id="ra2radio" name="raradio1" type="checkbox" value="Sign language interpreter"  >
+                                                                    <label class="govuk-label govuk-checkboxes__label" for="ra2radio"  >
+                                                                        Sign language interpreter
+                                                                    </label>
+                                                                </div>
+                                                                <div class="govuk-checkboxes__item">
+                                                                    <input class="govuk-checkboxes__input" id="ra3radio" name="raradio1" type="checkbox" value="Hearing loop">
+                                                                    <label class="govuk-label govuk-checkboxes__label" for="ra3radio"  >
+                                                                        Hearing loop
+                                                                    </label>
+                                                                </div>
+                                                                <div class="govuk-checkboxes__item">
+                                                                    <input class="govuk-checkboxes__input" id="ra4radio" name="raradio1" type="checkbox" value="Accessible hearing rooms"  >
+                                                                    <label class="govuk-label govuk-checkboxes__label" for="ra4radio" >
+                                                                        Accessible hearing rooms
+                                                                    </label>
+                                                                </div>
+                                                                <div class="govuk-checkboxes__item"  onclick="toggleraother1();">
+                                                                    <input class="govuk-checkboxes__input" id="ra5radio" name="raradio1" type="checkbox" value="Anything else"  onclick="toggleraother1(); toggleraother1();" >
+                                                                    <label class="govuk-label govuk-checkboxes__label" for="ra5radio" onclick="toggleraother1();"  >
+                                                                        Anything else
+                                                                    </label>
+                                                                </div>
+
+                                                                    <div class="govuk-radios__conditional govuk-!-padding-top-5 govuk-!-padding-bottom-5" id="conditionalra1box"  style="display:none;">
+                                                                        <label class="govuk-label govuk-label-m govuk-!-font-weight-bold" for="more-detail-adjustments-other-1">
+                                                                            Enter the reasonable adjustments
+                                                                        </label>
+                                                                        <textarea class="govuk-textarea" id="more-detail-adjustments-other-1" name="more-detail-adjustments-other-1" rows="3" aria-describedby="more-detail-hint"></textarea>
+                                                                    </div>
+
+
+                                                            </div>
                                                         </div>
+
                                                     </div>
 
 
@@ -78,12 +121,55 @@ Case details
                                             </div>
 
                                                     <div class="govuk-radios__conditional govuk-!-padding-bottom-1 govuk-!-padding-top-3" style="display:none;" id="ra2">
-                                                        <div class="govuk-form-group" style="width: 600px;">
+                                                        <div class="govuk-form-group"style="width: 600px;">
                                                             <label class="govuk-label govuk-label-m govuk-!-font-weight-bold" for="more-detail">
-                                                                Tell us what reasonable adjustments are required
+                                                                Select the reasonable adjustments required
                                                             </label>
-                                                            <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="3" aria-describedby="more-detail-hint"></textarea>
+
+                                                            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+
+                                                                <div class="govuk-checkboxes__item">
+                                                                    <input class="govuk-checkboxes__input" id="ra21radio" name="raradio2" type="checkbox" value="Language interpreter"  >
+                                                                    <label class="govuk-label govuk-checkboxes__label" for="ra21radio" >
+                                                                        Language interpreter
+                                                                    </label>
+                                                                </div>
+                                                                <div class="govuk-checkboxes__item">
+                                                                    <input class="govuk-checkboxes__input" id="ra22radio" name="raradio2" type="checkbox" value="Sign language interpreter"  >
+                                                                    <label class="govuk-label govuk-checkboxes__label" for="ra22radio"  >
+                                                                        Sign language interpreter
+                                                                    </label>
+                                                                </div>
+                                                                <div class="govuk-checkboxes__item">
+                                                                    <input class="govuk-checkboxes__input" id="ra23radio" name="raradio2" type="checkbox" value="Hearing loop">
+                                                                    <label class="govuk-label govuk-checkboxes__label" for="ra23radio"  >
+                                                                        Hearing loop
+                                                                    </label>
+                                                                </div>
+                                                                <div class="govuk-checkboxes__item">
+                                                                    <input class="govuk-checkboxes__input" id="ra24radio" name="raradio2" type="checkbox" value="Accessible hearing rooms"  >
+                                                                    <label class="govuk-label govuk-checkboxes__label" for="ra24radio" >
+                                                                        Accessible hearing rooms
+                                                                    </label>
+                                                                </div>
+                                                                <div class="govuk-checkboxes__item"  onclick="toggleraother2();">
+                                                                    <input class="govuk-checkboxes__input" id="ra25radio" name="raradio2" type="checkbox" value="Anything else"  onclick="toggleraother2(); toggleraother2();" >
+                                                                    <label class="govuk-label govuk-checkboxes__label" for="ra5radio" onclick="toggleraother1();"  >
+                                                                        Anything else
+                                                                    </label>
+                                                                </div>
+
+                                                                <div class="govuk-radios__conditional govuk-!-padding-top-5 govuk-!-padding-bottom-5" id="conditionalra2box"  style="display:none;">
+                                                                    <label class="govuk-label govuk-label-m govuk-!-font-weight-bold" for="more-detail-adjustments-other-2">
+                                                                        Enter the reasonable adjustments
+                                                                    </label>
+                                                                    <textarea class="govuk-textarea" id="more-detail-adjustments-other-2" name="more-detail-adjustments-other-2" rows="3" aria-describedby="more-detail-hint"></textarea>
+                                                                </div>
+
+
+                                                            </div>
                                                         </div>
+
                                                     </div>
 
                                             <!--
@@ -146,7 +232,6 @@ Case details
             document.getElementById("ra1").style.display = "none";
             document.getElementById("resonableadjustments1").checked = false;
         }
-
     }
 
 
@@ -180,6 +265,39 @@ Case details
             document.getElementById("resonableadjustments3").checked = false;
         }
 
+    }
+
+
+
+
+
+    function toggleraother1()
+    {
+        if(document.getElementById("conditionalra1box").style.display == "none")
+        {
+            document.getElementById("ra5radio").checked = true;
+            document.getElementById("conditionalra1box").style.display = "block";
+        }
+        else
+        {
+            document.getElementById("ra5radio").checked = false;
+            document.getElementById("conditionalra1box").style.display = "none";
+        }
+    }
+
+
+    function toggleraother2()
+    {
+        if(document.getElementById("conditionalra2box").style.display == "none")
+        {
+            document.getElementById("ra25radio").checked = true;
+            document.getElementById("conditionalra2box").style.display = "block";
+        }
+        else
+        {
+            document.getElementById("ra25radio").checked = false;
+            document.getElementById("conditionalra2box").style.display = "none";
+        }
     }
 
 
