--- a/app/views/hearings/pages/channel.html
+++ b/app/views/hearings/pages/channel.html
@@ -29,7 +29,7 @@ Case details
                                 <fieldset class="govuk-fieldset">
                                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                         <h1 class="govuk-fieldset__heading">
-                                            What type of hearing is required?
+                                            How will the hearing be carried out?
                                         </h1>
                                     </legend>
                                     <div class="govuk-radios">
